--- a/index.html
+++ b/index.html
@@ -205,6 +205,17 @@
         <img src="regne_glace\82.jpg" alt="regne_glace\82.jpg" class="corner-radial">
         <img src="regne_glace\84.jpg" alt="regne_glace\84.jpg" class="corner-radial">
         <img src="regne_glace\94.jpg" alt="regne_glace\94.jpg" class="corner-radial">
+        <img src="riv_emergents\102.jpg" alt="riv_emergents\102.jpg" class="corner-radial">
+        <img src="riv_emergents\61.jpg" alt="riv_emergents\61.jpg" class="corner-radial">
+        <img src="riv_emergents\94.jpg" alt="riv_emergents\94.jpg" class="corner-radial">
+        <img src="riv_emergents\95.jpg" alt="riv_emergents\95.jpg" class="corner-radial">
+        <img src="rup_turbo\113.jpg" alt="rup_turbo\113.jpg" class="corner-radial">
+        <img src="rup_turbo\18.jpg" alt="rup_turbo\18.jpg" class="corner-radial">
+        <img src="rup_turbo\38.jpg" alt="rup_turbo\38.jpg" class="corner-radial">
+        <img src="rup_turbo\5.jpg" alt="rup_turbo\5.jpg" class="corner-radial">
+        <img src="rup_turbo\51.jpg" alt="rup_turbo\51.jpg" class="corner-radial">
+        <img src="rup_turbo\79.jpg" alt="rup_turbo\79.jpg" class="corner-radial">
+        <img src="rup_turbo\80.jpg" alt="rup_turbo\80.jpg" class="corner-radial">
         <img src="sol_lune\112.jpg" alt="sol_lune\112.jpg" class="corner-radial">
         <img src="sol_lune\120.jpg" alt="sol_lune\120.jpg" class="corner-radial">
         <img src="sol_lune\123.jpg" alt="sol_lune\123.jpg" class="corner-radial">
